[project]
name = "propelauth-fastapi"
version = "4.3.2"
description = "A FastAPI library for managing authentication, backed by PropelAuth"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PropelAuth", email = "support@propelauth.com" }]
dependencies = [
    "propelauth-py==4.3.2",
    "requests",
    "httpx>=0.28.1",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/propelauth/propelauth-fastapi"

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build = false

[tool.hatch.build.targets.wheel]
packages = ["propelauth_fastapi"]
